derive/test/compile_fail/newtype_tag.rs
use sval_derive::*;

#[derive(Value)]
pub struct Newtype(#[sval(tag = "sval::tags::NUMBER")] i32);

fn main() {

}